# Graffathon2017

./: CMakeLists.txt  Makefile  README.md  build.sh
cmake/: FindPortAudio.cmake
include/: App.h  Audio.h  AudioTypes.h  CreateTrackingMember.h  Envelope.h  Examples.h  GLFunctions.h  GLObjects.h  GLObjects.tcc  GLUtils.h  GUI.h  Mesh.h  Mesh4D.h  Osc.h  RenderData.h  Renderable.h  Stuff.h  Trackball.h  Updateable.h
shaders/: fire_frag.glsl  rm_frag.glsl  rm_scene.glsl  simple_frag.glsl  simple_vert.glsl  wave_frag.glsl
src/: App.cpp  Audio.cpp  Envelope.cpp  Examples.cpp  GLObjects.cpp  GLUtils.cpp  GUI.cpp  Mesh.cpp  Mesh4D.cpp  Osc.cpp  Stuff.cpp  Trackball.cpp  Window.cpp
